// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-media-type should delete a media type 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;

exports[`delete-media-type should handle non-existent media type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
